[gd_scene load_steps=7 format=3 uid="uid://dx33ijlgd8m3w"]

[ext_resource type="PackedScene" uid="uid://dbl3r8426473v" path="res://sources/language_tool/plus_button.tscn" id="1_g3tt5"]
[ext_resource type="Script" uid="uid://cvnnauxttsciv" path="res://sources/language_tool/word_list_element.gd" id="1_q2ekb"]
[ext_resource type="Texture2D" uid="uid://c5jiyxrmmjmdb" path="res://assets/menus/modify_button.png" id="2_i6x6b"]
[ext_resource type="Texture2D" uid="uid://b8tctfnsj3prx" path="res://assets/menus/minus_button.png" id="3_mgblq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emsyu"]
bg_color = Color(0.254902, 0.329412, 0.572549, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1yui"]

[node name="WordListElement" type="MarginContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -110.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2ekb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_emsyu")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_t1yui")
current_tab = 0
tabs_visible = false

[node name="NormalContainer" type="HBoxContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/separation = 0
metadata/_tab_index = 0

[node name="Lesson" type="Label" parent="TabContainer/NormalContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_font_sizes/font_size = 70
text = "7"
horizontal_alignment = 1
clip_text = true

[node name="ExceptionCheckBox" type="CheckBox" parent="TabContainer/NormalContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Exception"
expand_icon = true

[node name="Word" type="Label" parent="TabContainer/NormalContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "Bonjour"
horizontal_alignment = 1
clip_text = true

[node name="Graphemes" type="Label" parent="TabContainer/NormalContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "b on j ou r"
horizontal_alignment = 1

[node name="EditButton" parent="TabContainer/NormalContainer" instance=ExtResource("1_g3tt5")]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="TextureRect" parent="TabContainer/NormalContainer/EditButton" index="0"]
texture = ExtResource("2_i6x6b")

[node name="EditContainer" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 0
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/EditContainer"]
layout_mode = 2

[node name="ValidateButton" parent="TabContainer/EditContainer/HBoxContainer" instance=ExtResource("1_g3tt5")]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
tooltip_text = "Validate edits"

[node name="TextureRect" parent="TabContainer/EditContainer/HBoxContainer/ValidateButton" index="0"]
texture = ExtResource("2_i6x6b")

[node name="ExceptionEditCheckBox" type="CheckBox" parent="TabContainer/EditContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Don't show the word alone in Kalulu games"
theme_override_font_sizes/font_size = 50
text = "Exception"
expand_icon = true

[node name="MinusButton" parent="TabContainer/EditContainer/HBoxContainer" instance=ExtResource("1_g3tt5")]
layout_mode = 2
tooltip_text = "Delete list element"

[node name="TextureRect" parent="TabContainer/EditContainer/HBoxContainer/MinusButton" index="0"]
texture = ExtResource("3_mgblq")

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/EditContainer"]
layout_mode = 2

[node name="WordEditLabel" type="Label" parent="TabContainer/EditContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Word: "

[node name="WordEdit" type="LineEdit" parent="TabContainer/EditContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "bonjour"
placeholder_text = "Press enter for autocomplete"
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/EditContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Fill in this element's components"
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/EditContainer/ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="GPsEditLabel" type="Label" parent="TabContainer/EditContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "GPs: "

[node name="GraphemesEditContainer" type="HBoxContainer" parent="TabContainer/EditContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="AddGPButton" parent="TabContainer/EditContainer/ScrollContainer/HBoxContainer" instance=ExtResource("1_g3tt5")]
unique_name_in_owner = true
layout_mode = 2

[node name="RemoveGPButton2" parent="TabContainer/EditContainer/ScrollContainer/HBoxContainer" instance=ExtResource("1_g3tt5")]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" parent="TabContainer/EditContainer/ScrollContainer/HBoxContainer/RemoveGPButton2" index="0"]
tooltip_text = "Remove element"
texture = ExtResource("3_mgblq")

[connection signal="pressed" from="TabContainer/NormalContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="TabContainer/EditContainer/HBoxContainer/ValidateButton" to="." method="_on_validate_button_pressed"]
[connection signal="pressed" from="TabContainer/EditContainer/HBoxContainer/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="text_submitted" from="TabContainer/EditContainer/HBoxContainer2/WordEdit" to="." method="_on_word_edit_text_submitted"]
[connection signal="pressed" from="TabContainer/EditContainer/ScrollContainer/HBoxContainer/AddGPButton" to="." method="_on_empty_add_gp_button_pressed"]
[connection signal="pressed" from="TabContainer/EditContainer/ScrollContainer/HBoxContainer/RemoveGPButton2" to="." method="_on_remove_gp_button_2_pressed"]

[editable path="TabContainer/NormalContainer/EditButton"]
[editable path="TabContainer/EditContainer/HBoxContainer/ValidateButton"]
[editable path="TabContainer/EditContainer/HBoxContainer/MinusButton"]
[editable path="TabContainer/EditContainer/ScrollContainer/HBoxContainer/RemoveGPButton2"]
